# rust_test

./: Cargo.toml
src/: client_server.rs  main.rs  serialize.rs  shm.rs  trash.rs
