[package]
name = "rust_test"
version = "0.1.0"
authors = ["jin"]

[dependencies]
tokio = "0.1"
tokio-uds = "0.2.0"
tempdir = "0.3"
bytes = "0.4"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
mio-named-pipes = "0.1.6"
mio = "0.6"
libc = "0.2"
tokio-codec = "0.1.0"